QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Graph client and port title in-place renaming is now
  integrated to native aliases and JACK metadata (aka.
  pretty-names). (EXPERIMENTAL)
  
- Refactored all native client/port name aliases.
  (EXPERIMENTAL)

- Re-defined all main application UNIX signal handling.
  (EXPERIMENTAL)


0.5.6  2019-03-11  Pre-LAC2019 Release Frenzy.

- Refactored all singleton/unique application instance
  setup logic away from X11/Xcb hackery.

- At last, JACK freewheel mode is now being detected
  as to postpone any active patchbay scans as much as
  possible.
  
- Removed old pre-FFADO 'freebob' driver support.

- HiDPI display screen support (Qt >= 5.6).

- Graph port temporary highlighting while hovering,
  if and only if connecting ports of same type and
  complementary modes.

- Bumped copyright headers into the New Year (2019).


0.5.5  2018-11-23  A Black-Friday'18 Release!

- Old deprecated Qt4 build support is no more.

- Graph port sort options added as View / Sort menu.

- System tray options now subject to current desktop
  environment availability.

- Also disable Setup / Misc / Other / Save JACK server
  configuration to (.jackdrc) when JACK D-Bus interface
  is enabled.

- Whether to use server synchronous mode option added
  to Setup / Settings / Parameters (only applied when
  JACK D-BUS interface is enabled).

- Disable some Setup / Settings / Advanced parameters 
  when JACK D-Bus interface is enabled and vice-versa.

- Attempt to power-cycle JACK D-Bus service on demand;

- Marked as probably useless anyway, old "H/W Monitor"
  option (-H) is now being ditched from Setup / Settings
  / Advanced tab.

- Graph port/connections highlighting.


0.5.4  2018-09-24  An Early Autumn'18 Release.

- Graph port-type colors are now configurable (cf. menu
  View > Colors.

- Make Graph nodes (ie. client boxes) transparent for yet