@@ -440,13 +440,13 @@ Do you want to save the changes?</source>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1723"/>
-        <location filename="../qjackctlGraph.cpp" line="1857"/>
+        <location filename="../qjackctlGraph.cpp" line="1780"/>
+        <location filename="../qjackctlGraph.cpp" line="1926"/>
         <source>Connect</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1893"/>
+        <location filename="../qjackctlGraph.cpp" line="1962"/>
         <source>Disconnect</source>
         <translation type="unfinished"></translation>
     </message>
@@ -981,18 +981,18 @@ Do you want to save the changes?</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../qjackctlGraphForm.cpp" line="76"/>
-        <source>Undo last (dis)connection</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <location filename="../qjackctlGraphForm.cpp" line="79"/>
         <source>&amp;Redo</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
+        <location filename="../qjackctlGraphForm.cpp" line="76"/>
+        <source>Undo last edit action</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
         <location filename="../qjackctlGraphForm.cpp" line="81"/>
-        <source>Redo last (dis)connection</source>
+        <source>Redo last edit action</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
