@@ -6,6 +6,9 @@ ChangeLog
 
 GIT HEAD
 
+- Graph nodes position changes are now undo/redo-able.
+  (EXPERIMENTAL)
+
 - Graph client and port title in-place renaming is now
   integrated to native aliases and JACK metadata (aka.
   pretty-names). (EXPERIMENTAL)
